--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Finance
-spring.datasource.username=root
-spring.datasource.password=new_password
+spring.datasource.url=jdbc:mysql://localhost:3306/Your-Database-Name
+spring.datasource.username=Your-Username
+spring.datasource.password=Your-password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
