--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Finance
+spring.datasource.url=jdbc:mysql://localhost:3306/f2
 spring.datasource.username=root
 spring.datasource.password=new_password
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.security.enabled=false
 
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
