Adding login and signup pages, and some changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/farmers
+spring.datasource.url=jdbc:mysql://localhost:3306/farmer
 spring.datasource.username=root
 spring.datasource.password=Multiverse@18.
 spring.jpa.hibernate.ddl-auto=update
