--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/farmer
+spring.datasource.url=jdbc:mysql://localhost:3306/f2
 spring.datasource.username=root
-spring.datasource.password=Multiverse@18.
+spring.datasource.password=new_password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
